[gd_scene load_steps=4 format=3 uid="uid://boss_base_0001"]

[ext_resource type="Script" path="res://scenes/entities/enemies/boss_base.gd" id="1_boss"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2_health"]

[sub_resource type="CircleShape2D" id="CircleShape2D_detect"]
radius = 900.0

[node name="BossBase" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_boss")

[node name="Hull" type="Polygon2D" parent="."]
color = Color(0.9, 0.2, 0.1, 1)
polygon = PackedVector2Array(0, -60, 30, -30, 45, 0, 35, 35, 15, 40, 0, 30, -15, 40, -35, 35, -45, 0, -30, -30)

[node name="Outline" type="Line2D" parent="."]
points = PackedVector2Array(0, -60, 30, -30, 45, 0, 35, 35, 15, 40, 0, 30, -15, 40, -35, 35, -45, 0, -30, -30, 0, -60)
width = 2.5
default_color = Color(1, 0.4, 0.2, 1)

[node name="Details" type="Line2D" parent="."]
points = PackedVector2Array(0, -30, 15, 0, 0, 15, -15, 0, 0, -30)
width = 1.5
default_color = Color(0.5, 0.1, 0.05, 1)

[node name="CollisionShape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -60, 30, -30, 45, 0, 35, 35, 15, 40, 0, 30, -15, 40, -35, 35, -45, 0, -30, -30)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_health")
max_health = 300

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detect")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(0, -60, 30, -30, 45, 0, 35, 35, 15, 40, 0, 30, -15, 40, -35, 35, -45, 0, -30, -30)

[node name="Abilities" type="Node" parent="."]
